--- a/site/main.css
+++ b/site/main.css
@@ -80,6 +80,7 @@ body {
 	height: 100vh;
 	justify-content: center;
 	padding: 20px;
+	background-color: hsl(0, 100%, 100%);
 }
 
 .curiosos-logo {
@@ -156,6 +157,7 @@ body {
 	color: hsl(0, 0%, 0%);
 	text-decoration: none;
 	padding: 5px;
+	background-color: hsl(0, 100%, 100%);
 	border-radius: 5px;
 	box-shadow: 0 0 0 1px hsla(0, 0%, 0%, .1), 0 1px 3px hsla(0, 0%, 0%, .1);
 }
